# motion_camera_ros

./: CMakeLists.txt  package.xml  setup.py
ros/launch/: motion_camera.launch
ros/scripts/: motion_camera_node
ros/src/motion_camera_ros/: motion_camera.py
